app/styles/app.scss
/* ... */
.rounded-top-right {
    border-top-right-radius: 0.25rem!important;
}
.rounded-top-left {
    border-top-left-radius: 0.25rem!important;
}

#ember-basic-dropdown-wormhole{
  z-index: 1100;
}

.ember-power-select-trigger{
  height: calc(1.5em + 0.75rem + 2px)!important;
  line-height: 2.25em!important;
  font-size: 1rem;
  font-weight: 400;
  outline-color: #86b7fe;
  outline-width: 1px;
  
  border-color: var(--bs-border-color);
  border-top: 1px solid var(--bs-border-color);
  border-bottom: 1px solid var(--bs-border-color);
  border-right: 1px solid var(--bs-border-color);
  border-left: 1px solid var(--bs-border-color);  
  background-color: var(--bs-form-control-bg);  
  &.intable {
    height: calc(1.5em + 0.75rem + 4px) !important;
    border-top: 0px solid var(--bs-border-color);
    border-bottom: 0px solid var(--bs-border-color);
    background-color: var(--bs-form-control-bg);
    .ember-power-select-clear-btn { background-color: var(--bs-form-control-bg); }
    &.selected {
      .ember-basic-dropdown-trigger,
      .ember-power-select-selected-item,
      .ember-power-select-clear-btn,
      .ember-power-select-status-icon,
      .ember-power-select-placeholder { 
        background-color: var(--bs-form-control-bg); 
        border-color: var(--bs-border-color) var(--bs-border-color) var(--bs-border-color) var(--bs-border-color);
      }
    }
  }
}

.ember-power-select-trigger:focus{
  border-color: #86b7fe;
  outline: 0;
  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
}

.ember-power-select-trigger:focus,
.ember-power-select-trigger--active {
  border-color: var(--bs-border-color);
  border-top: 1px solid var(--bs-border-color);
  border-bottom: 1px solid var(--bs-border-color);
  border-right: 1px solid var(--bs-border-color);
  border-left: 1px solid var(--bs-border-color);
}

.ember-power-select-dropdown {
  border-left: 1px solid var(--bs-border-color);
  border-right: 1px solid var(--bs-border-color);
}

.ember-power-select-dropdown.ember-basic-dropdown-content--above {
  border-top: 1px solid var(--bs-border-color);
}

.ember-power-select-dropdown.ember-basic-dropdown-content--below, .ember-power-select-dropdown.ember-basic-dropdown-content--in-place {
  border-bottom: 1px solid var(--bs-border-color);
}

.ember-basic-dropdown-content{
  background-color: var(--bs-form-control-bg);
}
.ember-power-select-option[aria-selected=true]{
  background-color: var(--bs-secondary);
  color: var(--bs-gray-300);
}
.ember-power-select-option[aria-current=true]{
  background-color: var(--bs-primary);
}

.border-form-control{
  border: 1px solid #ced4da!important;
}

.ember-power-select-placeholder {
    color: var(--bs-body-color);
}
/*.ember-power-select-status-icon{
  background-color: #ededed;
  line-height: 1.5em;
}*/

.ember-power-select-clear-btn {
 position: static!important;
 background-color: var(--bs-form-control-bg);
 display: inline-block;
 width: 1.4em;
 text-align: center;
}

img.twitch-emoticon{
  height: 1.5rem!important;
}
img.twitch-badge{
  height: 1.25rem!important;
}

.bulboff{
  filter: brightness(65%);  
}

div.pan-buttons-row{
  height:  0.7em!important;
  overflow: hidden; 
}
.pan-buttons-row div.row{
  height: inherit;
  overflow: hidden;
}
.pan-buttons-row div.col, .pan-buttons-row div.col-5 {
  height: inherit;
  overflow: hidden;
}

.pan-buttons-row svg{
  margin-top: -0.2em!important;
  vertical-align: top;
  align: center;
}

.click-through {
  pointer-events: none;
  .btn { pointer-events: initial; } 
}

.papermenu *{
  align-items: bottom!important;
  .navbar-toggler-icon { width: 27px; height: 27px; }
  .dragger { cursor: pointer!important; align-items: bottom!important; }
  svg.logo{
   /*fill: gray;*/
   height: 27px;
   width: 27px;
   vertical-align: bottom;
  }
}

.slider {
  -webkit-appearance: none;
  width: 100%;
  background: var(--bs-form-control-disabled-bg)!important;
  border: 1px solid #ced4da;
  outline: none;
  padding: 0px;
  color:  var(--bs-form-control-disabled-bg);
  opacity: 1;
  vertical-align: middle;
  -webkit-transition: .2s;
  transition: opacity .2s;
  box-shadow: none!important;
}

.slider::hover, .slider:active, .slider:visited {
  opacity: 1;
  background: var(--bs-form-control-disabled-bg)!important;
  box-shadow: none!important;
}

.slider::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  width: 1em;
  height: 2.3em;
  background: var(--bs-btn-bg);
  border-left: 1px solid var(--bs-border-color);
  border-right: 1px solid var(--bs-border-color);
  cursor: pointer;
  box-shadow: none!important;
}

.slider::-moz-range-thumb {
  width: 1em;
  height: 1.5em;
  background: var(--bs-btn-bg);
  border-left: 1px solid  var(--bs-border-color);
  border-right: 1px solid var(--bs-border-color);
  cursor: pointer;
  box-shadow: none!important;
}

.fancy-colums {
  max-height: 75%!important;
  column-count: 3;
  column-gap: 40px;
  word-break: break-word;
  white-space: normal;
  font-family: var(--bs-font-monospace);
  font-size: 0.85em;
  direction: ltr /* rtl:ignore */;
  /* white-space: pre-wrap; */
  unicode-bidi: bidi-override;
  margin: 1em 0px;
  @include media-breakpoint-down(xl) { column-count: 2; }  
  @include media-breakpoint-down(lg) { column-count: 1; } 
  hr { visibility: hidden; }
  strong { color: #09f; }
}

.spinner { padding-top: 2px; margin-left: 8px; margin-right: 8px; }

.btn:focus {
  box-shadow: none;
}

.pt-custom {
  padding-top: 2.3rem !important;
}

@keyframes spin {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  50% {
    -webkit-transform: rotate(180deg);
    transform: rotate(180deg);
  }  
  100% {
    -webkit-transform: rotate(359deg);
    transform: rotate(359deg);
  }
}

.spin {
  -webkit-animation: spin 0.75s infinite linear;
  animation: spin 0.75s infinite linear;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}
/* ... */

